@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2003/12/18 04:14:05 xtraeme Exp $
+$NetBSD: distinfo,v 1.7 2004/03/28 21:02:55 xtraeme Exp $
 
-SHA1 (sodipodi-0.33.tar.gz) = 0cba4a9957d693e8534ad081609459d268bc232f
-Size (sodipodi-0.33.tar.gz) = 2197940 bytes
+SHA1 (sodipodi-0.34.tar.gz) = 61d97af419d9c0e1dd89998d21e8c9f81857192c
+Size (sodipodi-0.34.tar.gz) = 2327501 bytes
